crates/phynix-parse/tests/stmt/snapshots/tests__stmt__r#loop__do_while_simple.snap
---
source: crates/phynix-parse/tests/stmt/loop.rs
assertion_line: 15
expression: script
---
items:
  - DoWhile:
      body:
        items:
          - Echo:
              exprs:
                - IntLiteral:
                    value: 1
      cond:
        NameRef:
          name:
            absolute: false
            parts:
              - {}
