crates/phynix-parse/tests/stmt/snapshots/tests__stmt__r#loop__for_empty.snap
---
source: crates/phynix-parse/tests/stmt/loop.rs
assertion_line: 32
expression: script
---
items:
  - For:
      init: ~
      cond: ~
      increment: ~
      body:
        items:
          - Noop: {}
