crates/phynix-parse/tests/stmt/snapshots/tests__stmt__r#loop__foreach_colon_syntax.snap
---
source: crates/phynix-parse/tests/stmt/loop.rs
assertion_line: 47
expression: script
---
items:
  - Foreach:
      expr:
        VarRef:
          name: {}
      key: ~
      value:
        VarRef:
          name: {}
      body:
        items:
          - Echo:
              exprs:
                - VarRef:
                    name: {}
