crates/phynix-parse/tests/stmt/snapshots/tests__stmt__r#loop__while_colon_syntax.snap
---
source: crates/phynix-parse/tests/stmt/loop.rs
assertion_line: 10
expression: script
---
items:
  - While:
      cond:
        NameRef:
          name:
            absolute: false
            parts:
              - {}
      body:
        items:
          - Echo:
              exprs:
                - IntLiteral:
                    value: 1
